argocd/manifests/plausible/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plausible
  labels:
    app.kubernetes.io/name: plausible
    app.kubernetes.io/managed-by: argocd
