argocd/manifests/plausible/base/service-clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible-clickhouse
  namespace: plausible
spec:
  type: ClusterIP
  selector:
    app: plausible-clickhouse
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: native
      port: 9000
      targetPort: 9000
      protocol: TCP
