argocd/manifests/plausible/base/service-plausible.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible
spec:
  type: ClusterIP
  selector:
    app: plausible
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
