argocd/manifests/plausible/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible-postgres
  namespace: plausible
spec:
  type: ClusterIP
  selector:
    app: plausible-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
